--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -26,6 +26,10 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "nodemon": "^3.0.1",
-    "prettier": "^3.0.1"
+    "prettier": "^3.0.1",
+    "@babel/preset-env": "^7.22.10",
+    "babel-jest": "^29.6.2",
+    "babel-plugin-transform-import-meta": "^2.2.1",
+    "jest": "^29.6.2"
   }
 }
